Add deployment checklist and update SEO metadata for portfolio site

--- a/index.html
+++ b/index.html
@@ -17,12 +17,26 @@
     <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/manifest.json">
-    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileColor" content="#0a0a0f">
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-    <meta name="theme-color" content="#ffffff">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="A modern starter template for React applications with TypeScript, Vite, ShadCN UI, and Tailwind CSS 4" />
-    <title>React TypeScript Vite Starter</title>
+    <meta name="description" content="Portfolio of Tom Tarpey - Principal AI Engineer specializing in Large Language Models, AI/ML infrastructure, and full-stack development. Expert in LLM fine-tuning, RAG systems, and agentic workflows." />
+    <meta name="keywords" content="AI engineer, LLM, machine learning, principal engineer, AI consultant, LLM fine-tuning, RAG, agentic workflows, full-stack developer, React, TypeScript" />
+    <meta name="author" content="Tom Tarpey" />
+    <meta name="theme-color" content="#0a0a0f" />
+    <title>Tom Tarpey - Principal AI Engineer | Portfolio</title>
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Tom Tarpey - Principal AI Engineer" />
+    <meta property="og:description" content="Principal AI Engineer with extensive experience in LLM fine-tuning, agentic workflows, and AI/ML infrastructure." />
+    <meta property="og:image" content="/og-image.png" />
+    
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Tom Tarpey - Principal AI Engineer" />
+    <meta name="twitter:description" content="Principal AI Engineer with extensive experience in LLM fine-tuning, agentic workflows, and AI/ML infrastructure." />
+    <meta name="twitter:image" content="/og-image.png" />
   </head>
   <body>
     <div id="root"></div>
